<resources>
    <string name="app_name">Cureya Assignment</string>
    <string name="font">serif</string>

    <string name="des">description</string>
    <string name="we_will_send_otp_to_your_mobile_number">We will send OTP to your Mobile Number</string>
    <string name="verify_otp">VERIFY OTP</string>
    <string name="name">Name</string>
    <string name="in_91">IN +91</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>


</resources>