<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/smile"
        android:contentDescription="@string/des" />

    <TextView
        android:id="@+id/otptxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/we_will_send_otp_to_your_mobile_number" />

    <TextView
        android:id="@+id/verifytxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/otptxt"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:visibility="invisible"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/verify_otp" />

    <LinearLayout
        android:id="@+id/linearviewname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/otptxt"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:gravity="center"
        android:visibility="visible"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textVi3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_left"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text=" Name" />

        <EditText
            android:id="@+id/editname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/border_right"
            android:ems="10"
            android:inputType="textPersonName|textCapWords"
            android:maxLength="15"
            android:padding="15dp"
            android:hint="@string/name"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="Autofill" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearviewemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linearviewname"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:gravity="center"
        android:visibility="visible"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textVi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_left"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="  Email" />

        <EditText
            android:id="@+id/editemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/border_right"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:padding="15dp"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearviewno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linearviewemail"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:gravity="center"
        android:visibility="visible"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_left"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/in_91" />

        <EditText
            android:id="@+id/editnumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/border_right"
            android:ems="10"
            android:maxLength="10"
            android:inputType="phone"
            android:hint="@string/mobile_number"
            android:textColor="@color/black"
            android:padding="15dp"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearviewotp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verifytxt"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="50dp"
        android:visibility="invisible"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/otp1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/border"
            android:ems="10"
            android:maxLength="1"
            android:gravity="center"
            android:inputType="phone"
            android:textSize="20sp"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/otp2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/border"
            android:ems="10"
            android:maxLength="1"
            android:gravity="center"
            android:inputType="phone"
            android:textSize="20sp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/otp3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/border"
            android:ems="10"
            android:maxLength="1"
            android:gravity="center"
            android:inputType="phone"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/otp4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/border"
            android:ems="10"
            android:maxLength="1"
            android:gravity="center"
            android:inputType="phone"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/otp5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/border"
            android:ems="10"
            android:maxLength="1"
            android:gravity="center"
            android:inputType="phone"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/otp6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/border"
            android:ems="10"
            android:maxLength="1"
            android:gravity="center"
            android:inputType="phone"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/sendBtn"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        app:cornerRadius="20dp"
        android:textColor="@color/white"
        android:layout_below="@+id/linearviewno"
        android:layout_centerHorizontal="true"
        android:text="SEND OTP" />

    <Button
        android:id="@+id/verifyBtn"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/linearviewno"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        android:visibility="invisible"
        android:text="Verify" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:indeterminateTint="@color/purple_500"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/linearviewno"
        android:layout_centerHorizontal="true" />


</RelativeLayout>